base/resource-limit-policy.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy 
metadata: 
  name: require-resource-limits 
spec: 
  validationFailureAction: Enforce 
  background: true 
  rules: 
    - name: check-resource-limits 
      match: 
        resources: 
          kinds: 
            - Pod 
      validate: 
        message: "Resource limits and requests are required for all containers." 
        pattern: 
          spec: 
            containers: 
              - resources: 
                  limits: 
                    memory: "?*" 
                    cpu: "?*" 
                  requests: 
                    memory: "?*" 
                    cpu: "?*"
